don't remove the shadow on ~Dialog

DialogShadows already connects to the destroyed signal of the wondow and
already knows how to clean up when a window goes away.
Removing it in ~Dialog does it too soon and will result in a missing
shadow during the fadeout animation

BUG:437920