src/plasmaquick/dialog.cpp
@@ -1057,10 +1057,6 @@ Dialog::Dialog(QQuickItem *parent)
 
 Dialog::~Dialog()
 {
-    if (!QCoreApplication::instance()->closingDown()) {
-        DialogShadows::self()->removeWindow(this);
-    }
-
     // Prevent signals from super-class destructor invoking our now-destroyed slots
     disconnect(this, nullptr, this, nullptr);
 }
